--- a/app/src/main/res/layout/activity_favor_article.xml
+++ b/app/src/main/res/layout/activity_favor_article.xml
@@ -1,40 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <RelativeLayout
-        android:id="@+id/favor_article_title_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/mainColor"
-        android:gravity="center_vertical"
-        android:paddingTop="10dp"
-        android:paddingBottom="4dp">
-
-        <TextView
-            android:id="@+id/favor_article_title_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:text="专栏收藏夹"
-            android:textColor="@color/white"
-            android:textSize="13sp"/>
-
-        <ImageView
-            android:id="@+id/favor_article_title_extraicon"
-            android:layout_width="12dp"
-            android:layout_height="19dp"
-            android:layout_marginStart="2dp"
-            android:layout_toStartOf="@+id/favor_article_title_title"
-            android:rotation="90"
-            android:src="@drawable/icon_extra" />
-    </RelativeLayout>
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <FrameLayout
-        android:id="@+id/favor_article_frame"
+        android:id="@+id/favor_other_frame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/favor_article_title_layout" />
+        android:layout_height="match_parent" />
 
+    <cn.luern0313.wristbilibili.widget.TitleView
+        android:id="@+id/favor_other_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:title="@string/favor_article_title"/>
 </RelativeLayout>
