--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,383 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/colorPrimary"
-    android:scrollbars="none">
+    android:background="?attr/colorPrimary">
 
-    <RelativeLayout
+    <ListView
+        android:id="@+id/menu_listview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="25dp"
-        android:paddingTop="25dp">
-
-        <RelativeLayout
-            android:id="@+id/menu_userlay"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
-            android:background="?android:attr/selectableItemBackground"
-            android:clickable="true"
-            android:focusable="true"
-            android:onClick="buutonUser"
-            android:paddingLeft="30dp"
-            android:paddingRight="30dp">
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/menu_useric"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:layout_marginBottom="2dp"
-                android:layout_marginEnd="2dp"
-                android:layout_marginTop="2dp"
-                android:src="@drawable/img_default_avatar" />
-
-            <ImageView
-                android:id="@+id/menu_uservip"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:layout_alignBottom="@+id/menu_useric"
-                android:layout_alignEnd="@+id/menu_useric"
-                android:src="@drawable/icon_vip"
-                android:visibility="gone" />
-
-            <TextView
-                android:id="@+id/menu_username"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="2dp"
-                android:layout_marginTop="4dp"
-                android:layout_toEndOf="@+id/menu_useric"
-                android:text="你还没登录呢~"
-                android:textColor="@color/white" />
-
-            <TextView
-                android:id="@+id/menu_userlv"
-                android:layout_width="wrap_content"
-                android:layout_height="13dp"
-                android:layout_below="@+id/menu_username"
-                android:layout_marginStart="2dp"
-                android:layout_marginTop="10dp"
-                android:layout_toEndOf="@+id/menu_useric"
-                android:background="@drawable/shape_lvbg_menu"
-                android:paddingBottom="1dp"
-                android:paddingLeft="4dp"
-                android:paddingRight="4dp"
-                android:paddingTop="1dp"
-                android:text="LV0"
-                android:textColor="@color/alpha_ee"
-                android:textSize="8sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/menu_usercoin"
-                android:layout_width="wrap_content"
-                android:layout_height="13dp"
-                android:layout_below="@+id/menu_username"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="9dp"
-                android:layout_toEndOf="@+id/menu_userlv"
-                android:text="硬币 : 0"
-                android:textColor="@color/alpha_ee"
-                android:textSize="10sp" />
-
-        </RelativeLayout>
-
-        <LinearLayout
-            android:id="@+id/menu_livelay"
-            android:layout_width="match_parent"
-            android:layout_height="46dp"
-            android:layout_below="@+id/menu_userlay"
-            android:background="?android:attr/selectableItemBackground"
-            android:clickable="true"
-            android:focusable="true"
-            android:gravity="center_vertical"
-            android:onClick="buttonDynamic"
-            android:orientation="horizontal"
-            android:paddingLeft="30dp"
-            android:paddingRight="30dp">
-
-            <ImageView
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                android:layout_marginEnd="6dp"
-                android:background="@drawable/shape_menuiconbg"
-                android:padding="7dp"
-                android:src="@drawable/icon_menu_live" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/menu_dynamic"
-                android:textColor="@color/white" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/menu_recommendlay"
-            android:layout_width="match_parent"
-            android:layout_height="46dp"
-            android:layout_below="@+id/menu_livelay"
-            android:background="?android:attr/selectableItemBackground"
-            android:clickable="true"
-            android:focusable="true"
-            android:gravity="center_vertical"
-            android:onClick="buttonRecommend"
-            android:orientation="horizontal"
-            android:paddingLeft="30dp"
-            android:paddingRight="30dp">
-
-            <ImageView
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                android:layout_marginEnd="6dp"
-                android:background="@drawable/shape_menuiconbg"
-                android:padding="7dp"
-                android:src="@drawable/icon_menu_recommend" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/menu_recommend"
-                android:textColor="@color/white" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/menu_rankinglay"
-            android:layout_width="match_parent"
-            android:layout_height="46dp"
-            android:layout_below="@+id/menu_recommendlay"
-            android:background="?android:attr/selectableItemBackground"
-            android:clickable="true"
-            android:focusable="true"
-            android:gravity="center_vertical"
-            android:onClick="buttonRanking"
-            android:orientation="horizontal"
-            android:paddingLeft="30dp"
-            android:paddingRight="30dp">
-
-            <ImageView
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                android:layout_marginEnd="6dp"
-                android:background="@drawable/shape_menuiconbg"
-                android:padding="7dp"
-                android:src="@drawable/icon_menu_ranking" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/menu_ranking"
-                android:textColor="@color/white" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/menu_remindlay"
-            android:layout_width="match_parent"
-            android:layout_height="46dp"
-            android:layout_below="@+id/menu_rankinglay"
-            android:background="?android:attr/selectableItemBackground"
-            android:clickable="true"
-            android:focusable="true"
-            android:gravity="center_vertical"
-            android:onClick="buttonRemind"
-            android:orientation="horizontal"
-            android:paddingLeft="30dp"
-            android:paddingRight="30dp">
-
-            <ImageView
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                android:layout_marginEnd="6dp"
-                android:background="@drawable/shape_menuiconbg"
-                android:padding="7dp"
-                android:src="@drawable/icon_menu_remind" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/menu_remind"
-                android:textColor="@color/white" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/menu_downlay"
-            android:layout_width="match_parent"
-            android:layout_height="46dp"
-            android:layout_below="@+id/menu_remindlay"
-            android:background="?android:attr/selectableItemBackground"
-            android:clickable="true"
-            android:focusable="true"
-            android:gravity="center_vertical"
-            android:onClick="buttonDL"
-            android:orientation="horizontal"
-            android:paddingLeft="30dp"
-            android:paddingRight="30dp">
-
-            <ImageView
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                android:layout_marginEnd="6dp"
-                android:background="@drawable/shape_menuiconbg"
-                android:padding="7dp"
-                android:src="@drawable/icon_menu_download" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/menu_download"
-                android:textColor="@color/white" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/menu_searchlay"
-            android:layout_width="match_parent"
-            android:layout_height="46dp"
-            android:layout_below="@+id/menu_downlay"
-            android:background="?android:attr/selectableItemBackground"
-            android:clickable="true"
-            android:focusable="true"
-            android:gravity="center_vertical"
-            android:onClick="buttonSearch"
-            android:orientation="horizontal"
-            android:paddingLeft="30dp"
-            android:paddingRight="30dp">
-
-            <ImageView
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                android:layout_marginEnd="6dp"
-                android:background="@drawable/shape_menuiconbg"
-                android:padding="7dp"
-                android:src="@drawable/icon_menu_search" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/menu_search"
-                android:textColor="@color/white" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/menu_collectlay"
-            android:layout_width="match_parent"
-            android:layout_height="46dp"
-            android:layout_below="@+id/menu_searchlay"
-            android:background="?android:attr/selectableItemBackground"
-            android:clickable="true"
-            android:focusable="true"
-            android:gravity="center_vertical"
-            android:onClick="buttonCollect"
-            android:orientation="horizontal"
-            android:paddingLeft="30dp"
-            android:paddingRight="30dp">
-
-            <ImageView
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                android:layout_marginEnd="6dp"
-                android:background="@drawable/shape_menuiconbg"
-                android:padding="7dp"
-                android:src="@drawable/icon_menu_collect" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/menu_collect"
-                android:textColor="@color/white" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/menu_watchlaterlay"
-            android:layout_width="match_parent"
-            android:layout_height="46dp"
-            android:layout_below="@+id/menu_collectlay"
-            android:background="?android:attr/selectableItemBackground"
-            android:clickable="true"
-            android:focusable="true"
-            android:gravity="center_vertical"
-            android:onClick="buttonWatchlater"
-            android:orientation="horizontal"
-            android:paddingLeft="30dp"
-            android:paddingRight="30dp">
-
-            <ImageView
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                android:layout_marginEnd="6dp"
-                android:background="@drawable/shape_menuiconbg"
-                android:padding="7dp"
-                android:paddingTop="2dp"
-                android:src="@drawable/icon_menu_watchlater" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/menu_watchlater"
-                android:textColor="@color/white" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/menu_historylay"
-            android:layout_width="match_parent"
-            android:layout_height="46dp"
-            android:layout_below="@+id/menu_watchlaterlay"
-            android:background="?android:attr/selectableItemBackground"
-            android:clickable="true"
-            android:focusable="true"
-            android:gravity="center_vertical"
-            android:onClick="buttonHistory"
-            android:orientation="horizontal"
-            android:paddingLeft="30dp"
-            android:paddingRight="30dp">
-
-            <ImageView
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                android:layout_marginEnd="6dp"
-                android:background="@drawable/shape_menuiconbg"
-                android:padding="7dp"
-                android:paddingTop="2dp"
-                android:src="@drawable/icon_menu_history" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/menu_history"
-                android:textColor="@color/white" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/menu_setting"
-            android:layout_width="match_parent"
-            android:layout_height="46dp"
-            android:layout_below="@+id/menu_historylay"
-            android:background="?android:attr/selectableItemBackground"
-            android:clickable="true"
-            android:focusable="true"
-            android:gravity="center_vertical"
-            android:onClick="buttonSetting"
-            android:orientation="horizontal"
-            android:paddingLeft="30dp"
-            android:paddingRight="30dp">
-
-            <ImageView
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                android:layout_marginEnd="6dp"
-                android:background="@drawable/shape_menuiconbg"
-                android:padding="7dp"
-                android:src="@drawable/icon_menu_setting" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/menu_setting"
-                android:textColor="@color/white" />
-        </LinearLayout>
-
-    </RelativeLayout>
-</ScrollView>
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:divider="@null"
+        android:dividerHeight="0dp"
+        android:paddingTop="25dp"
+        android:paddingBottom="25dp" />
+</RelativeLayout>
