--- a/app/src/main/res/layout/activity_text.xml
+++ b/app/src/main/res/layout/activity_text.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -8,41 +9,20 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <RelativeLayout
-            android:id="@+id/text_title_layout"
+        <cn.luern0313.wristbilibili.widget.TitleView
+            android:id="@+id/text_title"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="?attr/colorTitleBackground"
-            android:gravity="center_vertical"
-            android:paddingBottom="4dp"
-            android:paddingTop="10dp">
-
-            <TextView
-                android:id="@+id/text_title_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:textColor="@color/white" />
-
-            <ImageView
-                android:id="@+id/text_title_extraicon"
-                android:layout_width="12dp"
-                android:layout_height="19dp"
-                android:layout_marginStart="2dp"
-                android:layout_toStartOf="@+id/text_title_title"
-                android:rotation="90"
-                android:src="@drawable/icon_extra" />
-
-        </RelativeLayout>
+            app:mode="back" />
 
         <TextView
             android:id="@+id/text_textview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
             android:layout_marginLeft="28dp"
-            android:layout_marginRight="28dp"
             android:layout_marginTop="6dp"
-            android:textSize="12sp"/>
+            android:layout_marginRight="28dp"
+            android:layout_marginBottom="30dp"
+            android:textSize="12sp" />
     </LinearLayout>
 </ScrollView>
