--- a/app/src/main/res/layout/fragment_user_video.xml
+++ b/app/src/main/res/layout/fragment_user_video.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:ignore="ContentDescription,UseCompoundDrawables">
 
     <LinearLayout
         android:id="@+id/user_video_loading"
@@ -80,7 +82,9 @@
         android:id="@+id/user_video_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clipToPadding="false"
         android:divider="@color/alpha"
-        android:dividerHeight="0dp" />
+        android:dividerHeight="0dp"
+        android:paddingTop="33dp" />
 
 </RelativeLayout>
