--- a/app/src/main/res/layout/activity_article.xml
+++ b/app/src/main/res/layout/activity_article.xml
@@ -1,67 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <RelativeLayout
-        android:id="@+id/art_title_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorTitleBackground"
-        android:gravity="center_vertical"
-        android:paddingTop="10dp"
-        android:paddingBottom="4dp">
-
-        <ViewFlipper
-            android:id="@+id/art_title_title"
-            android:layout_width="wrap_content"
-            android:layout_height="19dp"
-            android:layout_centerHorizontal="true">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="专栏"
-                android:textColor="@color/white"
-                android:textSize="13sp" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="评论"
-                android:textColor="@color/white"
-                android:textSize="13sp" />
-
-        </ViewFlipper>
-
-        <ImageView
-            android:id="@+id/art_title_extraicon"
-            android:layout_width="12dp"
-            android:layout_height="19dp"
-            android:layout_toStartOf="@+id/art_title_title"
-            android:rotation="90"
-            android:src="@drawable/icon_extra" />
-
-        <ImageView
-            android:id="@+id/art_title_extraicon2"
-            android:layout_width="12dp"
-            android:layout_height="19dp"
-            android:layout_toEndOf="@+id/art_title_title"
-            android:rotation="270"
-            android:src="@drawable/icon_extra" />
-    </RelativeLayout>
+    android:layout_height="match_parent"
+    tools:ignore="ContentDescription">
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/art_viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/art_title_layout" />
+        android:layout_height="match_parent" />
+
+    <cn.luern0313.wristbilibili.widget.TitleView
+        android:id="@+id/art_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:mode="viewpager"
+        app:title="@string/article_title" />
 
     <LinearLayout
         android:id="@+id/art_loading"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/art_title_layout"
+        android:layout_below="@+id/art_title"
         android:background="?android:attr/colorBackground"
         android:clickable="true"
         android:focusable="true"
@@ -79,7 +40,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="加载中. . ."
+            android:text="@string/main_tip_loading"
             android:textSize="13sp" />
     </LinearLayout>
 
@@ -87,7 +48,7 @@
         android:id="@+id/art_noweb"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/art_title_layout"
+        android:layout_below="@+id/art_title"
         android:background="?android:attr/colorBackground"
         android:clickable="true"
         android:focusable="true"
@@ -100,12 +61,12 @@
             android:layout_width="wrap_content"
             android:layout_height="92dp"
             android:padding="6dp"
-            android:src="@drawable/img_noweb" />
+            android:src="@drawable/img_no_web" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="加载失败\n可能是没有网络？"
+            android:text="@string/main_tip_no_web"
             android:textSize="13sp" />
     </LinearLayout>
 
@@ -113,7 +74,7 @@
         android:id="@+id/art_novideo"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/art_title_layout"
+        android:layout_below="@+id/art_title"
         android:background="?android:attr/colorBackground"
         android:clickable="true"
         android:focusable="true"
@@ -131,9 +92,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="内容不见了. . .\n可能是没有登录？"
+            android:text="@string/main_tip_no_data"
             android:textSize="13sp" />
-
     </LinearLayout>
 
 </RelativeLayout>
