--- a/app/src/main/res/layout/activity_logsoff.xml
+++ b/app/src/main/res/layout/activity_logsoff.xml
@@ -1,40 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:ignore="ContentDescription">
 
-    <RelativeLayout
-        android:id="@+id/logs_title_layout"
+    <cn.luern0313.wristbilibili.widget.TitleView
+        android:id="@+id/logs_title"
         android:layout_width="match_parent"
-        android:layout_height="33dp"
-        android:background="?attr/colorTitleBackground"
-        android:gravity="center_vertical"
-        android:paddingBottom="4dp"
-        android:paddingTop="10dp">
-
-        <TextView
-            android:id="@+id/logs_title_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:text="注销"
-            android:textColor="@color/white" />
-
-        <ImageView
-            android:id="@+id/logs_title_extraicon"
-            android:layout_width="12dp"
-            android:layout_height="19dp"
-            android:layout_marginLeft="2dp"
-            android:layout_toLeftOf="@id/logs_title_title"
-            android:rotation="90"
-            android:src="@drawable/icon_extra" />
-    </RelativeLayout>
+        android:layout_height="wrap_content"
+        app:mode="back"
+        app:title="@string/logs_off_title" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/logs_title_layout">
+        android:layout_below="@+id/logs_title">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -49,17 +31,17 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:gravity="center_horizontal"
-                android:text="如果你要登录其他账号，或看动态、收藏有问题，你应尝试注销账号重新登录\n\n点击下面的按钮会注销账号并重启应用" />
+                android:text="@string/logs_off_tip" />
 
             <Button
                 style="@style/Widget.AppCompat.Button.Colored"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
                 android:layout_marginTop="4dp"
+                android:layout_marginRight="10dp"
                 android:onClick="clickLogsoff"
-                android:text="注销并重启应用"
+                android:text="@string/logs_off_button"
                 android:textColor="@color/white" />
 
         </LinearLayout>
@@ -69,10 +51,11 @@
         android:id="@+id/logs_nologin"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/logs_title_layout"
+        android:layout_below="@+id/logs_title"
         android:layout_centerInParent="true"
         android:background="?android:attr/colorBackground"
         android:clickable="true"
+        android:focusable="true"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:paddingTop="20dp"
@@ -81,14 +64,14 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="88dp"
-            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal"
             android:src="@drawable/img_videonotfound" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:text="你还没登录. . ." />
+            android:text="@string/main_tip_no_login2" />
     </LinearLayout>
 
 </RelativeLayout>
