--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,39 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <FrameLayout
         android:id="@+id/main_frame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="33dp" />
+        android:layout_height="match_parent"/>
 
-    <RelativeLayout
+    <cn.luern0313.wristbilibili.widget.TitleView
         android:id="@+id/main_title"
         android:layout_width="match_parent"
         android:layout_height="33dp"
-        android:background="?attr/colorTitleBackground"
-        android:gravity="center_vertical"
         android:onClick="buttonTitle"
-        android:paddingBottom="4dp"
-        android:paddingTop="10dp">
-
-        <TextView
-            android:id="@+id/main_title_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:text="动态"
-            android:textColor="@color/white" />
-
-        <ImageView
-            android:id="@+id/main_title_extraicon"
-            android:layout_width="12dp"
-            android:layout_height="19dp"
-            android:layout_marginStart="2dp"
-            android:layout_toEndOf="@id/main_title_title"
-            android:src="@drawable/icon_extra" />
-    </RelativeLayout>
-
+        app:mode="menu"/>
 </RelativeLayout>
