--- a/app/src/main/res/layout/activity_opensource.xml
+++ b/app/src/main/res/layout/activity_opensource.xml
@@ -10,34 +10,11 @@
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
-        <RelativeLayout
+        <cn.luern0313.wristbilibili.widget.TitleView
             android:id="@+id/open_title_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="?attr/colorTitleBackground"
-            android:gravity="center_vertical"
-            android:paddingBottom="4dp"
-            android:paddingTop="10dp">
-
-            <TextView
-                android:id="@+id/open_title_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:text="关于开源"
-                android:textColor="@color/white"
-                android:textSize="13sp" />
-
-            <ImageView
-                android:id="@+id/open_title_extraicon"
-                android:layout_width="12dp"
-                android:layout_height="19dp"
-                android:layout_marginStart="2dp"
-                android:layout_toStartOf="@+id/open_title_title"
-                android:rotation="90"
-                android:src="@drawable/icon_extra" />
-
-        </RelativeLayout>
+            app:title="@string/open_source_title"/>
 
         <TextView
             android:layout_width="wrap_content"
