--- a/app/src/main/res/layout/activity_sue.xml
+++ b/app/src/main/res/layout/activity_sue.xml
@@ -1,41 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <RelativeLayout
-        android:id="@+id/dt_title_layout"
-        android:layout_width="match_parent"
-        android:layout_height="33dp"
-        android:background="?attr/colorTitleBackground"
-        android:gravity="center_vertical"
-        android:paddingBottom="4dp"
-        android:paddingTop="10dp">
-
-        <TextView
-            android:id="@+id/dt_title_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:text="炫耀一下"
-            android:textColor="@color/white"
-            android:textSize="13sp" />
-
-        <ImageView
-            android:id="@+id/dt_title_extraicon"
-            android:layout_width="12dp"
-            android:layout_height="19dp"
-            android:layout_marginStart="2dp"
-            android:layout_toStartOf="@+id/dt_title_title"
-            android:rotation="90"
-            android:src="@drawable/icon_extra" />
-    </RelativeLayout>
+    android:layout_height="match_parent"
+    tools:ignore="ContentDescription">
 
     <ScrollView
+        android:id="@+id/sue_lay"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/dt_title_layout">
+        android:clipToPadding="false"
+        android:paddingTop="33dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -52,14 +28,14 @@
                 android:layout_marginLeft="24dp"
                 android:layout_marginRight="24dp"
                 android:gravity="center_horizontal"
-                android:text="想不想发个动态炫耀炫耀自己在用手表刷b站？" />
+                android:text="@string/sue_tip" />
 
             <TextView
-                android:id="@+id/dt_text"
+                android:id="@+id/sue_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:background="?attr/colorLayerBack"
+                android:background="?attr/colorLayerBackground"
                 android:paddingLeft="20dp"
                 android:paddingTop="10dp"
                 android:paddingRight="20dp"
@@ -67,25 +43,25 @@
                 android:textSize="13sp" />
 
             <Button
-                android:id="@+id/dt_re"
+                android:id="@+id/sue_re"
                 android:layout_width="match_parent"
                 android:layout_height="38dp"
                 android:layout_marginLeft="60dp"
-                android:layout_marginRight="60dp"
                 android:layout_marginTop="6dp"
+                android:layout_marginRight="60dp"
                 android:onClick="clickRe"
-                android:text="换一条"
+                android:text="@string/sue_refresh"
                 android:textSize="12sp" />
 
             <Button
-                android:id="@+id/dt_send"
+                android:id="@+id/sue_send"
                 style="@style/Widget.AppCompat.Button.Colored"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
                 android:onClick="clickSend"
-                android:text="发送"
+                android:text="@string/sue_send"
                 android:textColor="@color/white" />
         </LinearLayout>
     </ScrollView>
@@ -94,46 +70,54 @@
         android:id="@+id/dt_nologin"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/dt_title_layout"
         android:layout_centerInParent="true"
         android:background="?android:attr/colorBackground"
         android:clickable="true"
+        android:clipToPadding="false"
+        android:focusable="true"
         android:gravity="center_horizontal"
         android:orientation="vertical"
-        android:paddingTop="20dp"
+        android:paddingTop="33dp"
         android:visibility="gone">
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="88dp"
-            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
             android:src="@drawable/img_videonotfound" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:text="你还没登录. . ." />
+            android:text="@string/main_tip_no_login2" />
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/dt_loading"
+        android:id="@+id/sue_loading"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/dt_title_layout"
         android:layout_centerInParent="true"
         android:clickable="true"
+        android:clipToPadding="false"
+        android:focusable="true"
         android:gravity="center"
+        android:paddingTop="33dp"
         android:paddingBottom="20dp"
         android:visibility="gone">
 
         <ProgressBar
-            android:id="@+id/progressBar"
             style="?android:attr/progressBarStyle"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
     </LinearLayout>
 
+    <cn.luern0313.wristbilibili.widget.TitleView
+        android:id="@+id/sue_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:mode="back"
+        app:title="@string/sue_title" />
 </RelativeLayout>
 
