--- a/app/src/main/res/layout/activity_supportme.xml
+++ b/app/src/main/res/layout/activity_supportme.xml
@@ -12,41 +12,20 @@
         android:orientation="vertical"
         android:paddingBottom="10dp">
 
-        <RelativeLayout
+        <cn.luern0313.wristbilibili.widget.TitleView
             android:id="@+id/sme_title_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="?attr/colorTitleBackground"
-            android:gravity="center_vertical"
-            android:paddingBottom="4dp"
-            android:paddingTop="10dp">
-
-            <TextView
-                android:id="@+id/sme_title_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:text="支持我"
-                android:textColor="@color/white" />
-
-            <ImageView
-                android:id="@+id/sme_title_extraicon"
-                android:layout_width="12dp"
-                android:layout_height="19dp"
-                android:layout_marginStart="2dp"
-                android:layout_toStartOf="@+id/sme_title_title"
-                android:rotation="90"
-                android:src="@drawable/icon_extra" />
-
-        </RelativeLayout>
+            app:mode="back"
+            app:title="@string/support_me_title" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="6dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
             android:layout_marginTop="6dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="6dp"
             android:gravity="center_horizontal"
             android:text="    大学生维护项目不易. . . \n望慷慨捐赠" />
 
