--- a/app/src/main/res/layout/activity_unsupported_link.xml
+++ b/app/src/main/res/layout/activity_unsupported_link.xml
@@ -1,42 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:ignore="ContentDescription">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
         android:orientation="vertical"
-        android:paddingBottom="30dp"
-        android:gravity="center_horizontal">
+        android:paddingBottom="30dp">
 
-        <RelativeLayout
-            android:id="@+id/ul_title_layout"
+        <cn.luern0313.wristbilibili.widget.TitleView
+            android:id="@+id/ul_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="?attr/colorTitleBackground"
-            android:gravity="center_vertical"
-            android:paddingBottom="4dp"
-            android:paddingTop="10dp">
-
-            <TextView
-                android:id="@+id/ul_title_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:text="网页"
-                android:textColor="@color/white" />
-
-            <ImageView
-                android:id="@+id/ul_title_extraicon"
-                android:layout_width="12dp"
-                android:layout_height="19dp"
-                android:layout_marginStart="2dp"
-                android:layout_toStartOf="@+id/ul_title_title"
-                android:rotation="90"
-                android:src="@drawable/icon_extra" />
-
-        </RelativeLayout>
+            app:mode="back"
+            app:title="@string/unsupported_link_title" />
 
         <TextView
             android:layout_width="match_parent"
@@ -45,7 +27,7 @@
             android:layout_marginTop="3dp"
             android:layout_marginEnd="22dp"
             android:gravity="center_horizontal"
-            android:text="不支持的页面\n请使用手机扫码查看" />
+            android:text="@string/unsupported_link_tip" />
 
         <TextView
             android:id="@+id/ul_link"
@@ -54,31 +36,31 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="2dp"
             android:layout_marginEnd="20dp"
-            android:textSize="12dp"
-            android:gravity="center_horizontal"/>
+            android:gravity="center_horizontal"
+            android:textSize="12sp" />
 
         <ImageView
             android:id="@+id/ul_qr"
             android:layout_width="120dp"
-            android:layout_height="120dp"/>
+            android:layout_height="120dp" />
 
         <TextView
+            style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/Widget.AppCompat.Button.Colored"
-            android:textColor="?attr/colorButtonText"
-            android:text="使用其他应用打开链接"
-            android:onClick="clickUnsupported"/>
-        
+            android:onClick="clickUnsupported"
+            android:text="@string/unsupported_link_open"
+            android:textColor="?attr/colorButtonText" />
+
         <LinearLayout
             android:id="@+id/ul_loading"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_marginTop="6dp"
+            android:gravity="center"
+            android:orientation="horizontal"
             android:paddingStart="20dp"
-            android:paddingEnd="20dp"
-            android:gravity="center">
+            android:paddingEnd="20dp">
 
             <ProgressBar
                 android:layout_width="wrap_content"
@@ -87,8 +69,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="加载页面信息中..."/>
-            
+                android:text="@string/unsupported_link_loading" />
+
         </LinearLayout>
 
         <org.sufficientlysecure.htmltextview.HtmlTextView
@@ -97,8 +79,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginEnd="24dp"
-            android:textAppearance="@android:style/TextAppearance.Small"/>
-
+            android:textAppearance="@android:style/TextAppearance.Small" />
 
     </LinearLayout>
 
