--- a/app/src/main/res/layout/fragment_bangumi_detail.xml
+++ b/app/src/main/res/layout/fragment_bangumi_detail.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clipToPadding="false"
+    android:paddingTop="33dp"
     tools:ignore="RtlSymmetry,SmallSp,ContentDescription">
 
     <ScrollView
