--- a/app/src/main/res/layout/fragment_dynamic_detail.xml
+++ b/app/src/main/res/layout/fragment_dynamic_detail.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/dynamic_detail_lay"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="32dp"
     android:clipToPadding="false"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingTop="33dp"
+    android:paddingBottom="32dp">
 
     <include
+        layout="@layout/item_dynamic"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        layout="@layout/item_dynamic"/>
+        android:layout_height="wrap_content" />
 
 </ScrollView>
