--- a/app/src/main/res/layout/fragment_user_list_people.xml
+++ b/app/src/main/res/layout/fragment_user_list_people.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:ignore="ContentDescription">
 
     <LinearLayout
         android:id="@+id/user_list_people_nothing"
@@ -57,7 +59,9 @@
         android:id="@+id/user_list_people_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clipToPadding="false"
         android:divider="@color/alpha"
-        android:dividerHeight="0dp" />
+        android:dividerHeight="0dp"
+        android:paddingTop="33dp" />
 
 </RelativeLayout>
