--- a/app/src/main/res/layout/widget_title.xml
+++ b/app/src/main/res/layout/widget_title.xml
@@ -1,24 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/title_layout"
     android:layout_width="match_parent"
-    android:layout_height="26dp"
+    android:layout_height="33dp"
     android:background="?attr/colorTitleBackground"
-    android:gravity="center_vertical">
+    android:gravity="center_vertical"
+    android:paddingTop="10dp"
+    android:paddingBottom="4dp"
+    tools:ignore="ContentDescription">
 
-    <TextView
-        android:id="@+id/main_title_title"
+    <ViewFlipper
+        android:id="@+id/title_title"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="动态"
-        android:textColor="@color/white"
-        android:textSize="12sp" />
+        android:layout_height="19dp"
+        android:layout_centerHorizontal="true">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"/>
+    </ViewFlipper>
 
     <ImageView
         android:id="@+id/title_extraicon"
         android:layout_width="12dp"
-        android:layout_height="16dp"
-        android:layout_marginStart="2dp"
-        android:layout_toEndOf="@+id/main_title_title"
+        android:layout_height="19dp"
+        android:layout_toStartOf="@+id/title_title"
+        android:rotation="90"
+        android:src="@drawable/icon_extra" />
+
+    <ImageView
+        android:id="@+id/title_extraicon2"
+        android:layout_width="12dp"
+        android:layout_height="19dp"
+        android:layout_toEndOf="@+id/title_title"
+        android:rotation="270"
         android:src="@drawable/icon_extra" />
 </RelativeLayout>
